kubernetes/_old/heapster/grafana.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana
  namespace: heapster
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/grafana/provisioning/datasources/
          name: grafana-datasource
        - mountPath: /etc/grafana/provisioning/dashboards/
          name: grafana-dashboard-provider
        - mountPath: /var/lib/grafana/dashboards/
          name: grafana-initial-dashboard
      volumes:
      - name: grafana-datasource
        configMap:
          name: grafana-datasource
          items:
          - key: influxdb.yml
            path: influxdb.yml
      - name: grafana-dashboard-provider
        configMap:
          name: grafana-dashboard-provider
          items:
          - key: provider.yml
            path: provider.yml
      - name: grafana-initial-dashboard
        configMap:
          name: grafana-initial-dashboard
          items:
          - key: initial.json
            path: initial.json
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: heapster
spec:
  selector:
    app: grafana
  ports:
  - port: 80
    targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: heapster
spec:
  rules:
  - host: heapster.kelog.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: : grafana
            port:
              number: 80
